--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	div.container
+		div.row
+			div.col-sm-6.col-md-4.col-md-offset-4
+				a(href='/login', class='text-center new-account') Login
