--- a/views/job-single.hbs
+++ b/views/job-single.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class='form-signin' action='/jobs/{{ job._id }}' method='POST'>
+	<form class='form-signin' action='/app/jobs/{{ job._id }}' method='POST'>
 		<input type='text' name='name' value="{{job.name}}" class='form-control' placeholder='name' required, autofocus>
 		<input type='text' name='email' value="{{job.email}}" class='form-control' placeholder='email' required>
 		<input type='text' name='number' value="{{job.number}}" class='form-control' placeholder='number' required>
@@ -9,7 +9,7 @@
 		{{#if edit}}
 		<button class='btn btn-lg btn-primary btn-block' type='submit'>Edit Job</button>
 	</form>
-		<a href="/jobs/{{ job._id }}/delete"><button class='btn btn-lg btn-primary btn-block'>Delete Job</button></a>
+		<a href="/app/jobs/{{ job._id }}/delete"><button class='btn btn-lg btn-primary btn-block'>Delete Job</button></a>
 		{{/if}}
 	{{#if message}}
 		{{message}}
