splitted and changed views and routes

--- a/views/back/jobs.hbs
+++ b/views/back/jobs.hbs
@@ -6,8 +6,9 @@
 			<li>E-Mail: {{email}}</li>
 			<li>Number: {{number}}</li>
 			<li>
-				<a href="/jobs/{{_id}}">View Job</a>
+				<a href="/app/jobs/{{_id}}">View Job</a>
 			</li>
 		</ul>
 	{{/each}}
+	<a href="/app/jobs/new">Create Job</a>
 </div>
