--- a/views/back/users.hbs
+++ b/views/back/users.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<h2>All Users</h2>
+	<h1>All Users</h1>
 	{{#each User}}
 	  <ul>
 			<li>Username: {{username}}</li>
@@ -8,4 +8,5 @@
 			<li>Last Name: {{lastName}}</li>
 		</ul>
 	{{/each}}
+	<a href="/app/signup">Add User</a>
 </div>
