--- a/views/back/register.hbs
+++ b/views/back/register.hbs
@@ -1,5 +1,6 @@
 <div class="container">
-	<form class='form-signin' action='/signup' method='POST'>
+	<h1>Register User</h1>
+	<form class='form-signin' action='/app/signup' method='POST'>
 		<input type='text' name='username' class='form-control' placeholder='Username' required autofocus />
 		<input type='password' name='password' class='form-control nomargin' placeholder='Password' required />
 		<input type='email' name='email' class='form-control' placeholder='Email' required />
