--- a/views/back/jobs.hbs
+++ b/views/back/jobs.hbs
@@ -1,14 +1,30 @@
 <div class="container">
-	<h1>All Jobs</h1>
-	{{#each Jobs}}
-	  <ul>
-			<li>Name: {{name}}</li>
-			<li>E-Mail: {{email}}</li>
-			<li>Number: {{number}}</li>
-			<li>
-				<a href="/app/jobs/{{_id}}">View Job</a>
-			</li>
-		</ul>
-	{{/each}}
-	<a href="/app/jobs/new">Create Job</a>
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+			<h2>List all Jobs</h2>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Name:</th>
+						<th>E-Mail:</th>
+						<th>Salary:</th>
+						<th>Place:</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					{{#each Jobs}}
+						<tr>
+							<td>{{name}}</td>
+							<td>{{email}}</td>
+							<td>{{salary}}</td>
+							<td>{{place}}</td>
+							<td><a href="/app/jobs/{{_id}}">View Job</a></td>
+						</tr>
+					{{/each}}
+				</tbody>
+			</table>
+			<a href="/app/jobs/new" class="btn btn-default">Create Job</a>
+		</div>
+	</div>
 </div>
