--- a/views/back/login.hbs
+++ b/views/back/login.hbs
@@ -1,12 +1,15 @@
 <div class="container">
-	<h1>Login</h1>
-	<form class='form-signin' action='/app/login' method='POST'>
-		<input type='text' name='username' class='form-control' placeholder='Username' required, autofocus>
-		<input type='password' name='password' class='form-control' placeholder='Password' required>
-		<button class='btn btn-lg btn-primary btn-block' type='submit'>Sign in</button>
-		<a href='/app/signup' class='text-center new-account'>Create an account</a>
+	<form class="form-signin" action="/app/login" method="POST">
+		<h2 class="form-signin-heading">Please sign in</h2>
+		<label for="inputEmail" class="sr-only">Username</label>
+		<input type="text" name="username" class="form-control" placeholder="Username" autofocus>
+		<label for="inputPassword" class="sr-only">Password</label>
+		<input type="password" name="password" class="form-control" placeholder="Password">
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		<a href='/app/signup' class='btn btn-lg btn-primary btn-block signup-btn'>Create an account</a>
 	</form>
+
 	{{#if message}}
 		{{message}}
 	{{/if}}
-</div>
+ </div>
