--- a/views/back/register.hbs
+++ b/views/back/register.hbs
@@ -1,15 +1,25 @@
 <div class="container">
-	<h1>Register User</h1>
 	<form class='form-signin' action='/app/signup' method='POST'>
-		<input type='text' name='username' class='form-control' placeholder='Username' required autofocus />
-		<input type='password' name='password' class='form-control nomargin' placeholder='Password' required />
-		<input type='email' name='email' class='form-control' placeholder='Email' required />
-		<input type='text' name='firstName' class='form-control' placeholder='First Name' required />
-		<input type='text' name='lastName' class='form-control' placeholder='Last Name' required />
-		<button class='btn btn-lg btn-primary btn-block' type='submit'>Sign Up</button>
-</form>
+		<h2 class="form-signin-heading">Create new User</h2>
+		<label for="inputEmail" class="sr-only">Username</label>
+		<input type="text" name="username" class="form-control" placeholder="Username" required autofocus />
 
-{{#if message}}
-	{{message}}
-{{/if}}
+		<label for="inputPassword" class="sr-only">Password</label>
+		<input type="password" name="password" class="form-control" placeholder="Password" required />
+
+		<label for="inputEmail" class="sr-only">E-Mail</label>
+		<input type="email" name="email" class="form-control" placeholder="E-Mail" required />
+
+		<label for="inputFirstname" class="sr-only">First Name</label>
+		<input type="text" name="firstName" class="form-control" placeholder="First Name" required />
+
+		<label for="inputLastname" class="sr-only">Last Name</label>
+		<input type="text" name="lastName" class="form-control" placeholder="Last Name" required />
+
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+	</form>
+
+	{{#if message}}
+		{{message}}
+	{{/if}}
 </div>
