--- a/views/back/users.hbs
+++ b/views/back/users.hbs
@@ -1,12 +1,30 @@
 <div class="container">
-	<h1>All Users</h1>
-	{{#each User}}
-	  <ul>
-			<li>Username: {{username}}</li>
-			<li>E-Mail: {{email}}</li>
-			<li>First Name: {{firstName}}</li>
-			<li>Last Name: {{lastName}}</li>
-		</ul>
-	{{/each}}
-	<a href="/app/signup">Add User</a>
-</div>
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+			<h2>List all Users</h2>
+
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Username:</th>
+						<th>E-Mail:</th>
+						<th>First Name:</th>
+						<th>Last Name:</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					{{#each User}}
+						<tr>
+							<td>{{username}}</td>
+							<td>{{email}}</td>
+							<td>{{firstName}}</td>
+							<td>{{lastName}}</td>
+							<td><a href="/app/users/{{_id}}">View User</a></td>
+						</tr>
+					{{/each}}
+				</tbody>
+			</table>
+			<a href="/app/signup" class="btn btn-default">Add User</a>
+		</div>
+	</div>
