--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,34 @@
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Database Driven Websites</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/jobs">Jobs</a></li>
+        {{#if login}}
+        <li><a href="/app/home">Backend</a></li>
+        <li><a href="/app/signout">Logout</a></li>
+        {{else}}
+        <li><a href="/app/login">Login</a></li>
+        {{/if}}
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container">
-  <h1>wassup, im the index fam</h1>
-  <br/><br/><br/>
-  {{#if login}}
-    you are already logged in
-    <a href="/app/signout" class="text-center new-account">Log out</a>
-  {{else}}
-    <a href="/app/login" class="text-center new-account">Login</a>
-  {{/if}}
+  <div class="starter-template">
+    <h1>DDW Assignment #1</h1>
+    <p class="lead">
+      <strong>Tech stack</strong><br/>
+      NodeJS, MongoDB
+    </p>
+  </div>
 </div>
