--- a/views/job-single.hbs
+++ b/views/job-single.hbs
@@ -1,4 +1,51 @@
-<div class="container">
-  <h1>Job View:</h1>
-  {{job.name}}
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Database Driven Websites</a>
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="/">Home</a></li>
+				<li class="active"><a href="/jobs">Jobs</a></li>
+				{{#if login}}
+				<li><a href="/app/home">Backend</a></li>
+				<li><a href="/app/signout">Logout</a></li>
+				{{else}}
+				<li><a href="/app/login">Login</a></li>
+				{{/if}}
+			</ul>
+		</div>
+	</div>
+</nav>
+<div class="job-single container">
+  <div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+      <h2>Job View</h2>
+      <table class="table">
+				<thead>
+					<tr>
+						<th>Name:</th>
+						<th>E-Mail:</th>
+						<th>Salary:</th>
+						<th>Place:</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>{{job.name}}</td>
+						<td>{{job.email}}</td>
+						<td>{{job.salary}}</td>
+						<td>{{job.place}}</td>
+					</tr>
+				</tbody>
+			</table>
+      <a href="/jobs" class="btn btn-default">Back to Job List</a>
+    </div>
+  </div>
 </div>
