--- a/views/jobs.hbs
+++ b/views/jobs.hbs
@@ -1,13 +1,54 @@
-<div class="container">
-	<h1>All Jobs</h1>
-	{{#each Jobs}}
-	  <ul>
-			<li>Name: {{name}}</li>
-			<li>E-Mail: {{email}}</li>
-			<li>Number: {{number}}</li>
-			<li>
-				<a href="/jobs/{{_id}}">View Job</a>
-			</li>
-		</ul>
-	{{/each}}
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Database Driven Websites</a>
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="/">Home</a></li>
+				<li class="active"><a href="/jobs">Jobs</a></li>
+				{{#if login}}
+				<li><a href="/app/home">Backend</a></li>
+				<li><a href="/app/signout">Logout</a></li>
+				{{else}}
+				<li><a href="/app/login">Login</a></li>
+				{{/if}}
+			</ul>
+		</div>
+	</div>
+</nav>
+<div class="job-list container">
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+			<h2>List all Jobs</h2>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Name:</th>
+						<th>E-Mail:</th>
+						<th>Salary:</th>
+						<th>Place:</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					{{#each Jobs}}
+						<tr>
+							<td>{{name}}</td>
+							<td>{{email}}</td>
+							<td>{{salary}}</td>
+							<td>{{place}}</td>
+							<td><a href="/jobs/{{_id}}">View Job</a></td>
+						</tr>
+					{{/each}}
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
