fixed user update & delete

--- a/views/back/user-single.hbs
+++ b/views/back/user-single.hbs
@@ -11,7 +11,7 @@
 				{{#if edit}}
 					<button class='btn btn-lg btn-primary btn-block' type='submit'>Edit User</button>
 				</form>
-				<a href="/app/jobs/{{ user._id }}/delete"><button class='btn btn-lg btn-primary col-sm-4 col-sm-offset-4'>Delete User</button></a>
+				<a href="/app/users/{{ user._id }}/delete"><button class='btn btn-lg btn-primary col-sm-4 col-sm-offset-4'>Delete User</button></a>
 				{{/if}}
 				<br/><br/><br/><a href="/app/users/" class="btn btn-default">Back to User List</a>
 			{{#if message}}
